# OpenCv

./: .gitignore  README.md  capturandoRostrosEnImagen.py  deteccion_rostros.py  pyproject.toml
src/: capturandoRostrosDesdeBancoDeimagenes.py  deteccion_rostros.py  deteccion_rostros_video.py
