[project]
name = "opencv-good"
version = "0.1.0"
description = "Proyecto de detección y captura de rostros usando OpenCV"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
